manifests/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: svoyak
  annotations:
    openshift.io/node-selector: ""
  labels:
    name: svoyak
