manifests/06-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: svoyak
  namespace: svoyak
spec:
  host: svoyak.e8ca.engint.openshiftapps.com
  subdomain: ''
  to:
    kind: Service
    name: svoyak
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
